// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can filter by an exact package name 1`] = `
"Checking for outdated dependencies
--- PROGRESS ---
--- SEPARATOR ---
Package     Current   Latest   Package Type
package-a   1.0.0     1.1.0    dependencies
--- SEPARATOR ---
"
`;

exports[`can filter using a wildcard 1`] = `
"Checking for outdated dependencies
--- PROGRESS ---
--- SEPARATOR ---
Package                 Current   Latest   Package Type
@test-scope/package-a   0.0.1     1.0.0    dependencies
@test-scope/package-b   1.1.0     2.0.0    dependencies
--- SEPARATOR ---
"
`;
